@@ -1,8 +1,8 @@
 import org.checkerframework.common.value.qual.*;
 
 /** Test subtyping, LUB and annotation replacement in special cases. */
-@SuppressWarnings("deprecation")
-class Basics {
+@SuppressWarnings({"deprecation", "removal"})
+public class Basics {
 
     public void boolTest() {
         boolean a = false;
@@ -86,7 +86,7 @@ class Basics {
         Integer a;
 
         /* IntVal + IntVal */
-        a = new Integer(0);
+        a = Integer.valueOf(0);
         if (true) {
             a = 2;
         }
@@ -106,14 +106,14 @@ class Basics {
         @IntRange(from = 3, to = 30) Integer test5 = a;
 
         /* IntRange + IntVal */
-        a = new Integer(0);
+        a = Integer.valueOf(0);
         if (true) {
             a = x;
         }
         @IntRange(from = 0, to = 4) Integer test7 = a;
 
         /* IntRange (Wider than 10) + IntVal */
-        a = new Integer(0);
+        a = Integer.valueOf(0);
         if (true) {
             a = y;
         }
